apps/production/it-tools/it-tools-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-it-tools
  namespace: it-tools
  annotations:
    gethomepage.dev/href: "https://it-tools.hephlab.duckdns.org"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "IT - Tools"
    gethomepage.dev/description: "Collection of handy online tools for developers"
    gethomepage.dev/app: it-tools
    gethomepage.dev/group: "Dynamic"
    gethomepage.dev/icon: "https://github.com/CorentinTh/it-tools/blob/main/public/android-chrome-192x192.png?raw=true"  
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`it-tools.hephlab.duckdns.org`) 
      kind: Rule
      services:
        - name: it-tools
          port: 80
          namespace: it-tools
